# docker-multistage-build-cache-uv-bun-cargo

./: Cargo.toml  Dockerfile  README.md  package.json  pyproject.toml
.github/workflows/: build.yml
services/api/: pyproject.toml
services/api/src/api/: __init__.py  greeting.py
services/api/tests/: test_greeting.py
services/edge/: Cargo.toml
services/edge/src/: lib.rs
services/web/: package.json  tsconfig.json
services/web/src/: index.ts
services/web/tests/: greeting.test.ts
tools/: baseline.py  dockerfile_shape.py  workflow_shape.py
tools/tests/: test_baseline.py  test_dockerfile_shape.py  test_workflow_shape.py
