[project]
name = "polyglot-monorepo"
version = "0.1.0"
description = "Polyglot monorepo skeleton driven by uv, bun, and cargo workspaces."
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/api"]

[tool.uv.sources]
api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["services/api/tests"]
pythonpath = ["services/api/src"]
addopts = "-ra -q"
